# hb-knowledge-base

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/: main.py  sync_chroma_db.py  sync_data.py  sync_vector.py
src/app/: chroma_db.py
src/config/: config.py  settings.toml
src/models/: Disease.py  Hospital.py  Specialist.py  Specialty.py
