[project]
name = "health-buddy-knowledge-base"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Edward Duong", email = "edwardduong71311@gmail.com"},
]
dependencies = ["requests>=2.32.3", "dynaconf>=3.2.10", "chromadb>=0.6.3", "nltk>=3.9.1", "openai>=1.65.4", "fastapi[standard]>=0.115.11", "ruff>=0.9.9"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-dir = "src"
distribution = false


[tool.pdm.scripts]
sync_data = "python -m src.sync_data"
sync_vector = "python -m src.sync_vector"
sync_chroma = "python -m src.sync_chroma_db"
dev = "fastapi dev src/main.py"
start = "uvicorn src.main:app --host 0.0.0.0 --port 80"
check = "ruff check --fix"
format = "ruff format"